Prueba de commit

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ nav a:hover, nav a.active {
 
 .btn {
   background: #061a0f;
-  color:  #e2d5c3;
+  color:  #bfa580;
   padding: 12px 30px;
   border-radius: 30px;
   text-decoration: none;
