--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,13 @@ nav a:hover, nav a.active {
   margin-bottom: 40px;
 }
 
+.servicios-page h3 {
+  font-family: 'Great Vibes', cursive;
+  font-size: 1.2rem;
+  color:  rgba(184, 160, 106, 0.85);
+  margin-bottom: 40px;
+}
+
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -162,8 +169,8 @@ nav a:hover, nav a.active {
 }
 
 .card {
-  background: #303e30c5;
-  border: 2px solid rgb(167, 156, 90);
+  background: #152515;
+  border: 2px solid rgb(252, 234, 132);
   border-radius: 15px;
   overflow: hidden;
   display: flex;
@@ -202,17 +209,23 @@ nav a:hover, nav a.active {
 
 /* ==== Texto y botones ==== */ 
 .ver-mas {
-  background: #ac9d7a;
+  background: linear-gradient(
+    135deg,
+    rgba(171, 151, 104, 0.85),
+    rgba(251, 235, 197, 0.8),
+    rgba(171, 151, 104, 0.85)
+  );
   border: none;
   padding: 8px 15px;
   border-radius: 10px;
   cursor: pointer;
   margin-bottom: 10px;
   transition: 0.3s;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .ver-mas:hover {
-  background: #9e8a6d;
+  background: #a58356;
   color: #fff;
 }
 
@@ -220,7 +233,12 @@ nav a:hover, nav a.active {
 .info {
   max-height: 0;
   overflow: hidden;
-  background: #9b9b65;
+  background: linear-gradient(
+    135deg,
+    rgba(184, 160, 106, 0.85),
+    rgba(251, 235, 197, 0.8),
+    rgba(210, 180, 112, 0.85)
+  );;
   border-top: 2px solid rgb(167, 156, 90);
   transition: max-height 0.6s ease, padding 0.3s ease;
 }
@@ -246,7 +264,7 @@ nav a:hover, nav a.active {
 
 /* Texto interno */
 .info p {
-  color: #444;
+  color: #000000;
   margin-bottom: 10px;
   font-size: 1rem;
   line-height: 1.5;
@@ -257,7 +275,7 @@ nav a:hover, nav a.active {
 /* Botón de cotizar */
 .btn-cotizar {
   display: inline-block;
-  background: #25d366;
+  background: #1c3e28;
   color: white;
   padding: 8px 15px;
   border-radius: 10px;
