--- a/css/styles.css
+++ b/css/styles.css
@@ -76,11 +76,23 @@ nav a:hover, nav a.active {
 
 .hero h1 {
   font-size: 3rem;
-  color: rgba(232, 207, 149, 0.85);
-  margin-bottom: 20px;
   font-family: 'Great Vibes', cursive;
-  text-shadow: 0 0 4px rgba(0, 0, 0, 0.85);
+  margin-bottom: 20px;
+
+  /* Gradiente en el texto */
+  background: linear-gradient(
+    135deg,
+    rgb(255, 242, 141),
+    rgb(255, 249, 211),
+    rgb(255, 242, 141)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  /* Sombra opcional para destacar */
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
 }
+
 
 .btn {
   background: rgba(235, 212, 155, 0.532);
@@ -151,7 +163,7 @@ nav a:hover, nav a.active {
 .servicios-page h2 {
   font-family: 'Great Vibes', cursive;
   font-size: 2.2rem;
-  color: rgb(167, 156, 90);
+  color: rgb(159, 151, 102);
   margin-bottom: 40px;
 }
 
