--- a/css/styles.css
+++ b/css/styles.css
@@ -384,43 +384,6 @@ footer {
 
 /* ===================== WHATSAPP FLOTANTE ===================== */
 
-.whatsapp-float:hover {
-  transform: scale(1.1);
-}
-
-/* BURBUJA CONTACTO */
-#whatsapp-popup {
-  display: none;
-  position: fixed;
-  bottom: 80px;
-  right: 20px;
-  background: white;
-  padding: 15px;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  z-index: 300;
-  transition: all 0.3s ease-in-out;
-}
-
-#whatsapp-popup.active {
-  display: block;
-}
-
-
-.whatsapp-popup p {
-  margin-bottom: 10px;
-  color: #333;
-  font-weight: bold;
-}
-
-.whatsapp-popup .btn {
-  background: #105e2c;
-  color: white;
-  border-radius: 30px;
-  padding: 8px 20px;
-  text-decoration: none;
-}
-
 /* Animación salto para la burbuja flotante */
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
@@ -434,21 +397,30 @@ footer {
   }
 }
 
-.whatsapp-float {
+/* BOTÓN FLOTANTE */
+#whatsapp-float {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: rgba(171, 151, 104, 0.941);
-  color: white;
-  font-size: 24px;
-  padding: 15px;
+  width: 60px;       /* Ajusta tamaño según tu imagen */
+  height: 60px;
   border-radius: 50%;
   cursor: pointer;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  transition: transform 0.2s;
   z-index: 200;
-  animation: bounce 2s infinite; /* 👈 Animación activada */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: bounce 2s infinite;
+  background: none; /* quitamos el fondo */
 }
+
+#whatsapp-float img {
+  width: 50%;
+  height: 50%;
+  
+}
+
 
 /* ================ CONTACTO (centrado, apilado y compacto)=================== */
 .contacto-info {
