--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ nav a:hover, nav a.active {
   text-align: center;
   font-family: 'Great Vibes', cursive;
   font-size: 2.5rem;
-  color: #b99654;
+  color: rgb(134, 120, 75);
   margin-bottom: 15px;
 }
 
@@ -689,8 +689,8 @@ footer {
 
 .agendar-page h2 {
   font-family: 'Great Vibes', cursive;
-  font-size: 2.5rem;
-  color: #b99654;
+  font-size: 2.8rem;
+  color: rgb(134, 120, 75);
   margin-bottom: 20px;
   text-shadow: 2px 2px 10px rgba(255, 223, 150, 0.6);
 }
